feat: add input FLUX hooked and styled textInput

--- a/ios/project/Info.plist
+++ b/ios/project/Info.plist
@@ -72,6 +72,7 @@
 		<string>Lato.ttf</string>
 		<string>LatoBold.ttf</string>
 		<string>LatoRegular.ttf</string>
+		<string>GilroyMedium.ttf</string>
 	</array>
 </dict>
 </plist>
