--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
     "font-awesome": "^4.7.0",
+    "metro-config": "^0.63.0",
     "qs-stringify": "^1.2.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -28,6 +29,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
