--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-gesture-handler": "~1.6.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-reanimated": "~1.9.0",
+    "react-native-responsive-fontsize": "^0.4.3",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
